Resource HTML fixes.

--- a/resource/Documentation/index.html
+++ b/resource/Documentation/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html 
-     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
      
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
  <head>
@@ -17,9 +17,7 @@
    <p><strong>Online Resources:</strong></p>
    <ul>
     <li><a href="http://www.jfree.org/jfreechart">JFreeChart Library</a></li>
-    <li><a href="http://www.nextapp.com/products/echo2">Echo2 Home Page</a></li>
-    <li><a href="http://www.nextapp.com/products/mpl_license.html">Mozilla Public License</a></li>
-    <li><a href="http://www.nextapp.com/products/lgpl_license.html">GNU LGPL License</a></li>
+    <li><a href="http://echo.nextapp.com">Echo Home Page</a></li>
    </ul>
  </body>
 </html>
